# FastIOW-RS

./: .gitignore  Cargo.toml
fastiow-rs/: Cargo.toml
fastiow-rs-test/: Cargo.toml
fastiow-rs-test/src/: main.rs
fastiow-rs/src/: bits.rs  enums.rs  fastiow.rs  gpio.rs  i2c.rs  iowarrior.rs  iowkit.rs  lib.rs
fastiow-rs/src/bits/: bit.rs
fastiow-rs/src/digital/: input_pin.rs  output_pin.rs  pin_setup_error.rs
fastiow-rs/src/gpio/: gpio_setup_error.rs  input_pin.rs  mod.rs  output_pin.rs
fastiow-rs/src/i2c/: i2c.rs  i2c_address.rs  i2c_address_error.rs  i2c_communication_error.rs  i2c_error.rs  i2c_mode.rs  mod.rs
fastiow-rs/src/internal/: iowarrior_data.rs  iowarrior_mut_data.rs  iowkit_data.rs  iowkit_error.rs  iowkit_service.rs  mod.rs  pin_type.rs  pipe.rs  report_id.rs  used_pin.rs
fastiow-rs/src/iowarrior/: iowarrior.rs  iowarrior_service.rs  iowarrior_type.rs  mod.rs  peripheral.rs  peripheral_setup_error.rs  serial_number_error.rs
fastiow-rs/src/pwm/: mod.rs  pwm_error.rs
fastiow-rs/src/spi/: spi_error.rs
iowarrior-embedded-hal/: Cargo.toml
iowarrior-embedded-hal-test/: Cargo.toml
iowarrior-embedded-hal-test/src/: main.rs
iowarrior-embedded-hal/src/: lib.rs
iowarrior-embedded-hal/src/adc/: adc.rs  adc_config.rs  adc_data.rs  adc_error.rs  adc_service.rs
iowarrior-embedded-hal/src/bits/: bit.rs
iowarrior-embedded-hal/src/communication/: communication_data.rs  communication_error.rs  communication_service.rs  initialization_error.rs  iowarrior_service.rs  iowkit_service.rs  mod.rs
iowarrior-embedded-hal/src/communication/ioctrl/: communication_data.rs  communication_service.rs  initialization_service.rs
iowarrior-embedded-hal/src/communication/iowkit/: communication_data.rs  communication_service.rs  initialization_service.rs  mod.rs
iowarrior-embedded-hal/src/communication/usbhid/: communication_data.rs  communication_service.rs  initialization_service.rs  mod.rs  revision_service.rs
iowarrior-embedded-hal/src/delay/: delay.rs
iowarrior-embedded-hal/src/digital/: digital_service.rs  input_pin.rs  mod.rs  output_pin.rs  pin_error.rs  pin_setup_error.rs
iowarrior-embedded-hal/src/i2c/: i2c.rs  i2c_config.rs  i2c_error.rs  i2c_service.rs  mod.rs
iowarrior-embedded-hal/src/internal/: iowarrior_data.rs  iowarrior_mut_data.rs  iowarrior_service.rs  iowkit_data.rs  iowkit_error.rs  iowkit_service.rs  mod.rs  pin_type.rs  report.rs  report_id.rs  used_pin.rs
iowarrior-embedded-hal/src/iowarrior/: iowarrior.rs  iowarrior_data.rs  iowarrior_mut_data.rs  iowarrior_service.rs  iowarrior_type.rs  macros.rs  mod.rs  peripheral.rs  peripheral_service.rs  peripheral_setup_error.rs
iowarrior-embedded-hal/src/pwm/: mod.rs  pwm.rs  pwm_config.rs  pwm_data.rs  pwm_error.rs  pwm_pin.rs  pwm_service.rs
iowarrior-embedded-hal/src/spi/: mod.rs  spi.rs  spi_config.rs  spi_data.rs  spi_device.rs  spi_error.rs  spi_service.rs
iowkit-sys/: Cargo.toml  gen_bindings.sh
iowkit-sys/src/: bindings.rs  lib.rs
