[package]
name = "fastiow-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0.57"
libloading = "0.8.3"
lazy_static = "1.4.0"
refinement = "0.5.0"
iowkit-sys = { path = "../iowkit-sys" }
