[package]
name = "iowarrior-embedded-hal-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iowarrior-embedded-hal = { path = "../iowarrior-embedded-hal", features = ["embedded-hal-0"] }
anyhow = "1"
byteorder = "1.5"
embedded-hal = "1"
bme280 = "0.5"
embedded-sensors = { version = "0.1", default-features = false, features = ["bh1750"] }
ssd1306 = "0.8"
image = "0.25"
embedded-graphics = "0.8"
embedded-sdmmc = "0.7.0"