[package]
name = "iowarrior-embedded-hal"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0"
embedded-hal-0 = { version = "0.2.7", optional = true, package = "embedded-hal", features = ["unproven"] }
embedded-hal = { version = "1" }
hidapi = { version = "2.6", default-features = false, features = ["linux-native", "windows-native"] }
itertools = { version = "0.12", optional = true }
windows = { version = "0.56", features = ["Win32_Devices_HumanInterfaceDevice"], optional = true }
nix = { version = "0.28", features = ["ioctl"], optional = true }

libloading = { version = "0.8", optional = true }
iowkit-sys = { path = "../iowkit-sys", optional = true }
static_assertions = { version = "1.1", optional = true }

[features]
default = ["iowkit"]
embedded-hal-0 = ["dep:embedded-hal-0"]
iowkit = ["dep:libloading", "dep:iowkit-sys", "dep:static_assertions"]
usbhid = ["dep:itertools", "dep:nix", "dep:windows"]

